<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/bg_glass_card_premium"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qr_radio_android_title"
        android:textColor="#00E676"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp" />

    <ImageView
        android:id="@+id/ivRadioAndroidQr"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:src="@drawable/qr_radio_android_espana"
        android:contentDescription="@string/qr_radio_android_cd"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/btnCloseQr"
        style="@style/DialogCloseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/close" />

</LinearLayout>
